test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-unmanaged-from-oknil-shared.good
init-field-dflt-nonnil-unmanaged-from-oknil-shared.chpl:8: error: cannot initialize 'lhs' of type 'unmanaged MyClass' from a 'shared MyClass?'
init-field-dflt-nonnil-unmanaged-from-oknil-shared.chpl:13: error: done
